# doc_csv_xml_split

./: .gitignore  README.md  doc_csv_xml_split.py  doc_csv_xml_split.spec  pyproject.toml
