[tool.poetry]
name = "doc-csv-xml-split"
version = "0.1.0"
description = ""
authors = ["George Murgă <george.murga+github@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.5"
pytest = "^8.3.2"
isort = "^5.13.2"
pyinstaller = "^6.9.0"

[tool.poetry.scripts]
extract_xmls = "doc_csv_xml_split:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
reverse_sort = false
force_single_line = true
